# sister-in-law

./: .gitignore  README.md  hardhat.config.js  package.json
contracts/: DelegateCaller.sol  GovernorAlpha.sol  MatchPair.sol  MatchPairDelegate.sol  MatchPairDelegateStable.sol  MatchPairDelegateV2.sol  MatchPairDelegator.sol  MatchPairNormal.sol  MatchPairNormalV2.sol  MatchPairStable.sol  MatchPairStableV2.sol  MatchPairStorage.sol  MatchPairStorageStable.sol  MatchPairStorageV2.sol  PausePool.sol  PriceChainLinkChecker.sol  PriceChainLinkCheker.sol  PriceSafeChecker.sol  PriceSafeCheker.sol  ProfitStrategyHarvest.sol  ProfitStrategySushi.sol  ProfitStrategySushiDelegate.sol  ProfitStrategySushiProxy.sol  ProfitStrategyUni.sol  QueuePoolInfoFuns.sol  SilMaster.sol  SilToken.sol  StakeGatling.sol  StakeGatlingDelegate.sol  StakeGatlingHarvest.sol  StakeGatlingHub.sol  StakeGatlingProxy.sol  StakeGatlingSushi.sol  Timelock.sol  TrustList.sol  UniMigrator.sol
contracts/chainlink/: APIConsumerToUint.sol
contracts/interfaces/: IMatchPair.sol  IMigrateGatling.sol  IMintRegulator.sol  IPriceSafeChecker.sol  IProfitStrategy.sol  IProxyRegistry.sol  IStakeGatling.sol  IStakingRewards.sol  IUniswapV2Router01.sol  IWETH.sol
contracts/mock/: ChainLinkTest.sol  HarvestStakePool.sol  MasterChef.sol  SIL_AC.sol  UniStakePool.sol  WETH10.sol
sol-sil-program/: Cargo.toml  README.md
sol-sil-program/src/: entrypoint.rs  error.rs  helper.rs  instruction.rs  lib.rs  processor.rs
sol-sil-program/src/state/: admin.rs  match_pair.rs  mod.rs  queue.rs  user.rs
(+16 files in other folders)
