[package]
name = "sol-sil-program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.1"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
typenum = "1.14.0"
uint = "0.9"

[features]
default = []
no-entrypoint = []
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]